 ** IMPORTANT: Existing DogTags that reference other icons/groups by ID cannot be updated automatically - you will need to change these yourself.

 * TellMeWhen_Options now maintains a backup of TellMeWhen's SavedVariables that will be restored if TellMeWhen's SVs become corrupted.

 * Global Cooldowns are now only filtered for icon types that can track things on the global cooldown.
 * The Combat Event icon unit exclusion "Miscellaneous: Unknown Unit" will now also cause events that were fired without a unit to be excluded.
 * The meta icon setting "Inherit failed condition opacity" has been removed. Meta icons will now always inherit the exact opacity of the icons they are showing, though this can be overridden by the meta icon's opacity settings.
 * Complex chains of meta icon inheritance should now be handled much better, especially when some of the icons have animations on them.

 * You can now anchor groups to the cursor.
 * The duration of Diminishing Returns is now customizable in TMW's main options.
 * You can now right-click-and-drag the group resize handle to easily change the number of rows and columns of a group.
 * Added group settings that allow you to specify when a group should be shown based on the role that your current specialization fulfills.
 * You can now enter "none" or "blank" as a custom texture for an icon to force it to display no texture.
 * You can now enter a spell prefixed by a dash to omit that spell from any equivalencies entered, E.g. "Slowed; -Dazed" would check all slowed effects except daze.
 * New Condition: Specialization Role
 * The Buff/Debuff - "Number of" conditions now accept semicolon-delimited lists of multiple auras that should be counted.

 * Exporting a meta icon will also export the string(s) of its component icons.
 * Exporting groups and icons will also export the string(s) of their text layouts.

 * Various updates to many buff/debuff equivalencies.
 * New buff equivalency: SpeedBoosts
