@@ -57,3 +57,9 @@ ignore:
     - Documentation
     - README.md
     - CHANGELOG.txt
+    - Localization/TellMeWhen-itIT.lua
+    - Localization/TellMeWhen-frFR.lua
+    - Localization/TellMeWhen-deDE.lua
+    - Localization/TellMeWhen-koKR.lua
+    - Localization/TellMeWhen-esMX.lua
+    - Localization/TellMeWhen-ptBR.lua
