@@ -1,5 +1,8 @@
 ﻿
 local L = LibStub("AceLocale-3.0"):NewLocale("TellMeWhen", "esES", false)
+if not L then
+	L = LibStub("AceLocale-3.0"):NewLocale("TellMeWhen", "esMX", false)
+end
 if not L then return end
 
 
