@@ -18,11 +18,14 @@ TMW.CHANGELOG = {
 [==[]==],
 [==[* TellMeWhen_Options now maintains a backup of TellMeWhen's SavedVariables that will be restored if TellMeWhen's SVs become corrupted.]==],
 [==[]==],
+[==[* IMPORTANT: TellMeWhen no longer includes the massively incomplete localizations for itIT, ptBR, frFR, deDE, koKR, and esMX (esMX now uses esES). If you would like to contribute to localization, go to http://wow.curseforge.com/addons/tellmewhen/localization/]==],
+[==[]==],
 [==[* Global Cooldowns are now only filtered for icon types that can track things on the global cooldown.]==],
 [==[* The Combat Event icon unit exclusion "Miscellaneous: Unknown Unit" will now also cause events that were fired without a unit to be excluded.]==],
 [==[* The meta icon setting "Inherit failed condition opacity" has been removed. Meta icons will now always inherit the exact opacity of the icons they are showing, though this can be overridden by the meta icon's opacity settings.]==],
 [==[* Complex chains of meta icon inheritance should now be handled much better, especially when some of the icons have animations on them.]==],
 [==[]==],
+[==[* You can now anchor groups to the cursor.]==],
 [==[* The duration of Diminishing Returns is now customizable in TMW's main options.]==],
 [==[* You can now right-click-and-drag the group resize handle to easily change the number of rows and columns of a group.]==],
 [==[* Added group settings that allow you to specify when a group should be shown based on the role that your current specialization fulfills.]==],
